Bug 214707 - no "picture not saved" warning when some tool active
Summary: no "picture not saved" warning when some tool active
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Save (other bugs)
Version First Reported In: 1.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-15 20:22 UTC by Bartek Pietrasiak
Modified: 2022-02-02 16:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bartek Pietrasiak 2009-11-15 20:22:57 UTC
Version:           1.0.0-rc (rev.: 1049187) (using 4.3.2 (KDE 4.3.2), 4.3.2-4.fc11 Fedora)
Compiler:          gcc
OS:                Linux (i686) release 2.6.30.9-96.fc11.i686.PAE

If the picture have been modified and some tool is open (white balance, sharpening), the editor won't show warning after Forward (or other) button pressed.
Comment 1 Marcel Wiesweg 2009-12-07 17:45:37 UTC
SVN commit 1059911 by mwiesweg:

To find out if an image needs to be saved when goint to the next one, we relied
on the save action to be enabled. But when an image plugin is loaded, all standard
actions are disabled, so changes could silently be discarded.
As a solution, implement a method hasChangedToSave() and use that.
At the same time, consolidate slotUndoStateChange from ImageWindow and Showfoto to common base class.

BUG: 214707

 M  +2 -1      NEWS  
 M  +0 -11     showfoto/showfoto.cpp  
 M  +0 -1      showfoto/showfoto.h  
 M  +5 -0      utilities/imageeditor/canvas/canvas.cpp  
 M  +1 -0      utilities/imageeditor/canvas/canvas.h  
 M  +5 -0      utilities/imageeditor/canvas/dimginterface.cpp  
 M  +1 -0      utilities/imageeditor/canvas/dimginterface.h  
 M  +18 -1     utilities/imageeditor/editor/editorwindow.cpp  
 M  +2 -0      utilities/imageeditor/editor/editorwindow.h  
 M  +2 -10     utilities/imageeditor/editor/imagewindow.cpp  
 M  +1 -1      utilities/imageeditor/editor/imagewindow.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1059911