To find out if an image needs to be saved when goint to the next one, we relied on the save action to be enabled. But when an image plugin is loaded, all standard actions are disabled, so changes could silently be discarded. As a solution, implement a method hasChangedToSave() and use that. At the same time, consolidate slotUndoStateChange from ImageWindow and Showfoto to common base class.

BUG: 214707

svn path=/trunk/extragear/graphics/digikam/; revision=1059911